surse/err112.txt
prob112.cpp:8:31: error: ‘int cls::operator*(cls, cls)’ must take either zero or one argument
     int operator*(cls a, cls b) { return (a.x * b.x); }
                               ^